--- a/src/styles/_dashboard.scss
+++ b/src/styles/_dashboard.scss
@@ -11,11 +11,21 @@
     position: relative;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    width: 100%;
     height: 100%;
     background-color: white;
     max-height: 70px;
-    padding: 1.5rem 0rem;
+  
+    &-searchWrapper{
+      width: 85%;
+      display: flex;
+      justify-content: center;
+    }
+    &-icon{
+      cursor: pointer;
+      margin: 0 1rem;
+    }
   }
 
   &__center {
