--- a/src/styles/_search.scss
+++ b/src/styles/_search.scss
@@ -2,6 +2,7 @@ $form-border-color: #dfe1e5;
 
 .search__center {
   max-width: 560px;
+  width: calc(100% - 2rem );
   margin: 0 auto;
   background-color: $color-white;
 
@@ -36,7 +37,7 @@ $form-border-color: #dfe1e5;
 .search__form {
   background-color: $color-white;
   padding: 0.25rem 1rem;
-  width: 100%;
+  width:100%;
   height: 54px;
   max-width: 560px;
   border: 1px solid $form-border-color;
@@ -45,13 +46,15 @@ $form-border-color: #dfe1e5;
   box-shadow: 0 0 3px 0px $form-border-color;
   &-input {
     flex: 1;
-    padding: 0 0.5rem;
+    padding-right: 1rem;
     font-size: 1.25rem;
+    overflow: hidden;
     outline-width: 0;
     border: transparent;
   }
   &-btn {
-    padding: 0 0.75rem;
+    padding-right: 0.5rem;
+    padding-left: 0.375rem;
     @include btn;
     @include darkenOnHover();
 
